# rde-keyserver

./: .gitignore  Dockerfile  README.md  docker-compose.yml  entrypoint.sh  keyserver.nginx.conf  manage.py  pyproject.toml  uwsgi.ini
RDEDocuments/: admin.py  apps.py  models.py  urls.py  views.py
RDEDocuments/api/: urls.py  views.py
RDEDocuments/migrations/: 0001_initial.py  0002_alter_rdedocument_managers_and_more.py
RDEDocuments/templates/: base.html  documents.html  enroll.html
RDEKeyServer/: asgi.py  settings.py  urls.py  wsgi.py
keyserver/config/: admin.py  settings.py  urls.py
keyserver/keyserver/: admin.py  apps.py  models.py  urls.py  views.py
keyserver/keyserver/api/: urls.py  views.py
keyserver/keyserver/migrations/: 0001_initial.py
keyserver/keyserver/templates/: delete_document.html  documents.html
