[tool.poetry]
name = "rde-keyserver"
version = "0.1.0"
description = ""
authors = ["Job Doesburg <job.doesburg@surf.nl>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
django = "^4.1.3"
djangorestframework = "^3.14.0"
django-qr-code = "^3.1.1"
djangosaml2 = "^1.5.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

